Minnor changes added to improve registered technologies public table at home page

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html ng-app="SigetecApp">
     <head>
         <meta charset="utf-8">
-        <title>SigeTEC - Sistema Integrado de Gestión Estratégica de Tecnologías</title>
+        <title>SigeTEC :: Sistema Integrado de Gestión Estratégica de Tecnologías</title>
         <!-- Bootstrap styles -->
         <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" > -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.min.css">
@@ -254,7 +254,7 @@
             </div>
             <!-- Footer -->
             <div class="footer" ng-cloak>
-                <p class="text-center" style="padding:0;margin:0;">Sistema Integrado de Gestión Estratégica de Tecnologías (SigeTEC) - v03.2020. &nbsp;<a href="http://viceinvestigaciones.univalle.edu.co/universidad-empresa-otri">Oficina de Transferencia de Resultados de Investigación (OTRI)</a>&nbsp;<br></p>
+                <p class="text-center" style="padding:0;margin:0;">Sistema Integrado de Gestión Estratégica de Tecnologías (SigeTEC) - v03.2020. &nbsp;<a href="http://viceinvestigaciones.univalle.edu.co/index.php/quienes-somos-otri" target="_blank">Oficina de Transferencia de Resultados de Investigación (OTRI)</a>&nbsp;<br></p>
             </div>
         </div>
     </body>
